@@ -1,0 +1,14 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <title>Event Iframe</title>
+  <link rel="stylesheet" href="event.css" type="text/css" />
+</head>
+<body>
+
+<div id="pointer"></div>
+<p id="element-fire">Element#fire <strong>click here</strong></p>
+
+</body>
+</html>
